k8s/frontend-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-frontend-nodeport
  namespace: notification-system
spec:
  type: NodePort
  selector:
    app: notification-frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
